# confident-partial-interpretability

./: .gitignore  README.md  hypothesis.md  pre-experiment_draft  pre-experiment_draft.md  pre-registration_paper.md  pyproject.toml
.github/workflows/: ci.yml
configs/: default.yaml
docs/: EXPERIMENTS.md  github-actions-ci.yml  sample_prompts.txt
experiments/: __init__.py  hf_cpi_probe.py  interventions.py  measure_cpi_toy.py  modular_scaling_sweep.py  plot_cpi_json.py  plot_cpi_summary.py  synthetic_demo.py  tasks_toy.py  tiny_gpt.py  train_toy.py  train_toy_model.py
metrics/: __init__.py  confidence.py  coverage.py
outputs/: README.md
tests/: test_metrics.py
